# eyes-on-claude-code

./: .gitignore  .prettierignore  CLAUDE.md  LESSONS.md  README.ja.md  README.md  eocc-hook  eocc-lib.cjs  eocc-server  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: lint.yml  release.yml
docs/: configuration.md  deployment.md  desktop-install.md  security.md  server-install.md
scripts/: take-screenshots.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs
src-tauri/capabilities/: default.json
src-tauri/crates/eocc-core/: Cargo.toml
src-tauri/crates/eocc-core/src/: events.rs  hook_state.rs  lib.rs  state.rs  watcher.rs
src-tauri/crates/eocc-core/src/notifications/: desktop.rs  history.rs  mod.rs  ntfy.rs  pushover.rs  webhook.rs
src-tauri/crates/eocc-core/tests/: notification_pipeline.rs
src-tauri/src/: api_server.rs  commands.rs  difit.rs  events.rs  git.rs  main.rs  menu.rs  notification_pipeline.rs  persist.rs  settings.rs  setup.rs  state.rs  tmux.rs  web_tmux_viewer.html
src/components/: BranchCombobox.tsx  Header.tsx  NotificationSettings.tsx  SessionCard.tsx  TmuxViewer.tsx  icons.tsx
src/components/__tests__/: DiffButton.test.tsx  EmptyState.test.tsx  Header.test.tsx  MinimumView.test.tsx  SessionList.test.tsx  StatCard.test.tsx
src/context/__tests__/: useAppContext.test.tsx
src/hooks/: useWindowOpacity.ts
src/lib/: tauri.ts
src/lib/__tests__/: audio.test.ts  tauri.test.ts  utils.test.ts
src/test/: setup.ts
src/types/: index.ts
