[package]
name = "eyes-on-claude-code"
version = "0.0.2"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["desktop", "ntfy", "webhook", "pushover", "desktop_notifications"]
desktop = []
ntfy = ["eocc-core/ntfy"]
webhook = ["eocc-core/webhook"]
pushover = ["eocc-core/pushover"]
desktop_notifications = ["eocc-core/desktop_notifications"]

[dependencies]
eocc-core = { path = "crates/eocc-core" }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
opener = "0.8"
anyhow = "1"
base64 = "0.22"
urlencoding = "2"
tiny_http = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
