[package]
name = "eocc-core"
version = "0.0.2"
edition = "2021"
license = "MIT"

[features]
default = []
ntfy = ["dep:ureq"]
webhook = ["dep:ureq"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
ureq = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1"
