[package]
name = "eocc-core"
version = "0.0.2"
edition = "2021"
license = "MIT"

[features]
default = []
ntfy = ["dep:ureq"]
webhook = ["dep:ureq"]
pushover = ["dep:ureq"]
desktop_notifications = ["dep:notify-rust"]
headless = ["dep:env_logger", "ntfy", "webhook", "pushover"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
ureq = { version = "2", optional = true }
notify-rust = { version = "4", optional = true }
env_logger = { version = "0.11", optional = true }

[[bin]]
name = "eocc-hook"
required-features = ["headless"]

[[bin]]
name = "eocc-watcher"
required-features = ["headless"]

[dev-dependencies]
serde_json = "1"
